2007-09-06  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.lang/StackTrace2.jar: Rebuilt.
	* testsuite/libjava.lang/StackTrace2.java (checkLine): Print file
	name.

2007-09-06  Roman Zippel  <zippel@linux-m68k.org>

	* sysdep/m68k/locks.h: New file.
	* configure.host: Set sysdeps_dir and libgcj_interpreter for m68k.
	* configure.ac: Set SIGNAL_HANDLER for m68*-*-linux*.
	* configure: Regenerate.

2007-09-05  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* configure.host(gnu*): Set use_libgcj_bc to yes.

2007-09-04  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Do not pass --with-native-libdir to classpath.
	* configure: Regenerate.

2007-09-04  Matthias Klose  <doko@ubuntu.com>

	PR libgcj/33278
	* configure.ac: Robustify extraction of gcj version.
	* configure: Regenerate.

2007-09-04  Andrew Haley  <aph@redhat.com>

	PR java/27908
	* testsuite/libjava.lang/PR27908.java
	({run1,run2,run3}.isRunning): New Method.
	(main): Fix race condition.

2007-08-29  Andrew Haley  <aph@redhat.com>

	* gnu/classpath/natVMStackWalker.cc (VMStackWalker::getCallingClass):
	Make sure we're not sibcalled.
	(GET_CALLING_CLASS): Define for ARM EABI.

2007-08-22  Andrew Haley  <aph@redhat.com>

	* configure.host (BACKTRACESPEC): Add arm*-linux*.

2007-08-22  Andrew Haley  <aph@redhat.com>

	* configure.ac (LIBSTDCXXSPEC): New.
	* configure.host: Add arm*-linux* to pthread test.
	* configure.ac (LIBGCJTESTSPEC): Add path to libstdc++ for ARM
	EABI.
	* testsuite/libjava.jni/jni.exp (gcj_jni_compile_c_to_so): Use
	-fexceptions for ARM EABI.
	* testsuite/lib/libjava.exp (libjava_arguments): Add libgcj-test.spec.
	(libjava_invoke): Log the invocation.

2007-08-15  Andrew Haley  <aph@redhat.com>

	* configure.ac (extra_ldflags): Define.
	* Makefile.am: Use extra_ldflags for all executables.

2007-08-14  Andrew Haley  <aph@redhat.com>

	* sysdep/arm/backtrace.h: Remove stubs for _Unwind_GetIPInfo,
	_Unwind_GetRegionStart, and _Unwind_Backtrace.
